Introduce `StringFormatted` Refaster rule (#1961)